commit config server

--- a/config-server-git/src/main/resources/application.yml
+++ b/config-server-git/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/zackor/springCloudDemo.git
+          uri: https://github.com/zackor/springCloudDemo
+          username: zackor@163.com
+          password: 123qweASD
+          search-paths: config-repo
+
 server:
   port: 1201
