--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,23 @@
     <artifactId>demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <modules>
+        <module>api-gateway</module>
+        <module>config-client</module>
+        <module>config-server-git</module>
+        <module>eureka-client</module>
+        <module>eureka-server</module>
+        <module>eureka-consume</module>
+        <module>eureka-consumer-feign</module>
+        <module>eureka-consumer-ribbon</module>
+        <module>eureka-consumer-ribbon-hystrix</module>
+        <module>turbine</module>
+        <module>hystrix-dashboard</module>
+    </modules>
+
+    <packaging>pom</packaging>
+
+    <name>demo</name>
+    <description>spring cloud demo</description>
+    <url>https://github.com/zackor/springCloudDemo</url>
 </project>
